fix profile float left on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -659,7 +659,7 @@ close:hover {
   #profiles {
     transform:scale(1.5);
     transform-origin: 0 0;
-    float:right;
+    float:left;
     width:50%;
   }
   .results {
